# GTCRN-Micro

./: .gitignore  README.md  gtcrn_s3.onnx  pyproject.toml
docs/: TODO.md  plan.md
esp32_SE/: CMakeLists.txt  README.md
esp32_SE/main/: CMakeLists.txt  gtcrn_micro_int8_data.cc  idf_component.yml  main.cc
gtcrn_micro/: README.md  dataloader.py  infer.py  loss.py  tflite_infer.py  train.py  train_qat.py
gtcrn_micro/ckpts/: best_model_dns3.tar
gtcrn_micro/conf/: cfg_infer.yaml  cfg_resume_DNS3.yaml  cfg_train_DNS3.yaml  cfg_train_VCTK.yaml
gtcrn_micro/eval/: eval_intrusive_metrics.py  eval_metrics.py  eval_nonintrusive_dnsmos.py  evaluate.py
gtcrn_micro/models/: gtcrn_micro.py  gtcrn_s3.py
gtcrn_micro/models/onnx/: gtcrn_micro.onnx
gtcrn_micro/models/tflite/: fingerprint.pb  gtcrn_micro_dynamic_range_quant.tflite  gtcrn_micro_float16.tflite  gtcrn_micro_float32.tflite  gtcrn_micro_full_integer_quant.tflite  gtcrn_micro_full_integer_quant_with_int16_act.tflite  gtcrn_micro_integer_quant.tflite  gtcrn_micro_integer_quant_with_int16_act.tflite  gtcrn_s3_dynamic_range_quant.tflite  gtcrn_s3_float16.tflite  gtcrn_s3_float32.tflite  replace_gtcrn_s3.json  (+6 more)
gtcrn_micro/streaming/: gtcrn_micro_stream.py
gtcrn_micro/training/: dataloader.py
gtcrn_micro/utils/: calibration_data.py  distributed_utils.py  output_comparison.py  output_tests.py  quantizer.py  scheduler.py  torch_converter.py
python/: gtcrn_micro.onnx  main.py  pyproject.toml
scripts/: onnx2tf.sh  run_model_conversion.sh  run_py_metrics.sh  safety.sh  train.sh
tests/models/: test_gtcrn_micro.py
(+12 files in other folders)
