[project]
name = "GTCRN-micro"
version = "0.1.0"
description = "Evaluation and Model changes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ai-edge-litert==1.2.0",
    "bandit>=1.8.6",
    "einops==0.6.1",
    "flatbuffers>=25.9.23",
    "librosa>=0.11.0",
    "ml-dtypes==0.5.1",
    "omegaconf>=2.3.0",
    "onnx==1.17.0",
    "onnx-graphsurgeon>=0.5.8",
    "onnx-simplifier==0.4.33",
    "onnx2tf>=1.20.0",
    "onnxruntime>=1.20.1",
    "onnxscript>=0.5.6",
    "onnxsim>=0.4.36",
    "p-tqdm>=1.4.2",
    "pandas>=2.3.3",
    "pesq>=0.0.4",
    "psutil==5.9.5",
    "ptflops>=0.7.5",
    "pystoi>=0.4.1",
    "pytest>=8.4.2",
    "pytorch-tcn==1.0.0",
    "ruff>=0.14.0",
    "simple-onnx-processing-tools>=1.1.31",
    "sniffio>=1.3.1",
    "soundfile>=0.13.1",
    "tensorflow==2.19.0",
    "tf-keras==2.19.0",
    "tflite-runtime>=2.14.0",
    "torch>=2.5.1",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=gtcrn_micro"

# [project.scripts]
# torch-converter = ...
# micro-train = ...
# model-eval
# model profile
